--- a/testBuy.pug
+++ b/testBuy.pug
@@ -10,27 +10,27 @@ html(lang="en")
   body
     mixin plan(plannum,cost)
       span.choice
-        input.plannum(type="radio", name="License plan#")
-        h2.planid LICENSEPLAN##{plannum}
-        p #{cost}$ per license
+        input.choice__radio(type="radio", name="License plan#")
+        h2.choice__planid LICENSEPLAN##{plannum}
+        p.choice__description #{cost}$ per license
         
     form(action="submit", method="post") 
       +plan(1,13)
       +plan(2,22)
       +plan(3,34)
       hr
-      span.quantity 
+      span.quant 
         label Number of licenses: 
-        select
+        select.quant__options
           option(value='10' selected)
           option(value='20')
           option(value='30')
       hr
       span.order-price
-        h2 TOTAL:  #{totals}
+        h2.finalprice TOTAL: 
         sup US
       button(type="submit") BUY NOW
       span.urchoice 
-        p Selected plan:  ##{plansel}
+        p.useplan Selected plan:  #
 
     
