--- a/testBuy.pug
+++ b/testBuy.pug
@@ -9,10 +9,13 @@ html(lang="en")
     title Document
   body
     mixin plan(plannum,cost)
-      span.choice
-        input.choice__radio(type="radio", name="License plan#")
-        h2.choice__planid LICENSEPLAN##{plannum}
-        p.choice__description #{cost}$ per license
+      div.choice
+        label.radio
+          span.radio__input
+            input.radio(type="radio", name="License")
+            span.radio__control
+          span.radio__label LICENSEPLAN##{plannum}
+        span.radio__description #{cost}$ per license
         
     form(action="submit", method="post") 
       +plan(1,13)
