--- a/testBuy.sass
+++ b/testBuy.sass
@@ -2,3 +2,20 @@
   font-family: 'Bebas'
   src: url(fonts\Bebas-Regular.otf),
         url(fonts\Bebas-Regular.ttf)
+
+html
+  align-items: center
+  justify-content: center
+
+form
+  border: 4px solid gray
+  background-color: gray
+  background-opacity: .35
+
+
+button 
+  width: 14em
+  height: 2.5em
+  color: #fff
+  background: green
+  border-radius: 50%
