--- a/testBuy.sass
+++ b/testBuy.sass
@@ -1,10 +1,11 @@
 @font-face 
   font-family: 'Bebas'
-  src: url(fonts\Bebas-Regular.otf),
-    url(fonts\Bebas-Regular.ttf)
+  src: url(fonts\Bebas-Regular.otf), url(fonts\Bebas-Regular.ttf)
+  font-size: 1em
 
 
 $fill-col: #34648e
+
 *, 
 *:after,
 *:before
@@ -15,34 +16,46 @@ html
   justify-content: center
 
 form
-  border: 4px solid gray
-  background-color: gray
-  background-opacity: .35
+  border: .5em solid #ebebeb
+  background-color: #f8f8f8
+  width: 18em
 
-.radio
-  font-size: 2.5em
+/** .radio
+  font-size: 1.5em
   display: flex
   flex-direction: row
 
-.radio__input
+// .radio__input
 
-  input
+/**   input
     opacity: 0
     width: 0
     height: 0
     
     &:checked + .radio__control
       background: radial-gradient(currentcolor , #0294bf)
-
-.radio__label
+ **/
+/** .radio__label
   line-height: 1
 
-.radio__control
+/** .radio__control
   display: block
   width: 1.2em
   height: 1.2em
   border-radius: 50%
-  border: 0.1em solid $fill-col
+  border: 0.1em solid $fill-col **/
+
+.radio__description
+  float: right
+  
+.choice
+  margin-bottom: 3em
+
+select
+  width: 5em
+  margin: 3em
+
+
 .finalPrice
   color: $fill-col 
   text-transform: bold
@@ -52,7 +65,10 @@ button
   height: 2.5em
   color: #fff
   background: green
-  border-radius: 50%
+  border-radius: 1.25em
+  margin: 3em
+
 
 .urchoice
+  margin: 3em
   color: $fill-col
