selectors in js listeners, requiered html flow in sass

--- a/testBuy.sass
+++ b/testBuy.sass
@@ -60,7 +60,8 @@ select
   color: $fill-col 
   text-transform: bold
 
-button 
+button
+  display: block
   width: 14em
   height: 2.5em
   color: #fff
